--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <section class="hero">
         <div class="hero-contanier container">
           <h1 class="hero-tittle">Effective Solutions for Your Business</h1>
-          <button class="hero-btn" type="button">Order Service</button>
+          <button class="hero-btn" type="button" >Order Service</button>
         </div>
       </section>
 
@@ -64,9 +64,11 @@
           <h2 class="visually-hidden">Benefits</h2>
           <ul class="list">
             <li class="benefits-item">              
-                <svg class="benefits-icon" width="64" height="64">
-                  <use href="./images/icons.svg#icon-antenna"></use>
-                </svg>
+                <div class="benefits-block-item">
+                  <svg class="benefits-icon" width="64" height="64">
+                    <use href="./images/icons.svg#icon-antenna"></use>
+                  </svg>
+                </div>
               <h3 class="benefits-tittle">Strategy</h3>
               <p class="benefits-text">
                 Our goal is to identify the business problem to walk away with
@@ -74,9 +76,11 @@
               </p>
             </li>
             <li class="benefits-item">
-              <svg class="benefits-icon" width="64" height="64">
-                <use href="./images/icons.svg#icon-clock"></use>
-              </svg>
+              <div class="benefits-block-item">
+                <svg class="benefits-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="benefits-tittle">Punctuality</h3>
               <p class="benefits-text">
                 Bring the key message to the brand's audience for the best price
@@ -84,9 +88,11 @@
               </p>
             </li>
             <li class="benefits-item">
-              <svg class="benefits-icon" width="64" height="64">
-                <use href="./images/icons.svg#icon-diagram"></use>
-              </svg>
+             <div class="benefits-block-item">
+                <svg class="benefits-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+             </div>
               <h3 class="benefits-tittle">Diligence</h3>
               <p class="benefits-text">
                 Research and confirm brands that present the strongest digital
@@ -94,9 +100,11 @@
               </p>
             </li>
             <li class="benefits-item">
-              <svg class="benefits-icon" width="64" height="64">
-                <use href="./images/icons.svg#icon-astronaut"></use>
-              </svg>
+              <div class="benefits-block-item">
+                <svg class="benefits-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="benefits-tittle">Technologies</h3>
               <p class="benefits-text">
                 Design practice focused on digital experiences. We bring forth a
