--- a/index.html
+++ b/index.html
@@ -184,28 +184,28 @@
                 <p class="team-text">Frontend Developer</p>
                 <ul class="list social-list">
                   <li class="team-social">
-                    <a class="social-link">
+                    <a href="#" class="team-social-link">
                       <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social">
-                    <a class="social-link">
+                    <a href="#" class="social-link">
                       <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social">
-                    <a class="social-link">
+                    <a href="#" class="social-link">
                       <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social">
-                    <a class="social-link">
+                    <a href="#" class="social-link">
                       <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
