--- a/index.html
+++ b/index.html
@@ -193,28 +193,28 @@
                 <ul class="list social-list">
                   <li class="team-social">
                     <a href="#" class="team-social-link">
-                      <svg class="team-social-icon" width="16" height="16">
+                      <svg class="team-social=icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social">
-                    <a href="#" class="social-link">
-                      <svg class="team-social-icon" width="16" height="16">
+                    <a href="#" class="team-social-link">
+                      <svg class="team-social=icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social">
-                    <a href="#" class="social-link">
-                      <svg class="team-social-icon" width="16" height="16">
+                    <a href="#" class="team-social-link">
+                      <svg class="team-social=icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social">
-                    <a href="#" class="social-link">
-                      <svg class="team-social-icon" width="16" height="16">
+                    <a href="#" class="team-social-link">
+                      <svg class="team-social=icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -234,28 +234,28 @@
                 <ul class="list social-list">
                   <li class="team-social">
                     <a href="#" class="team-social-link">
-                      <svg class="team-social-icon" width="16" height="16">
+                      <svg class="team-social=icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social">
-                    <a href="#" class="social-link">
-                      <svg class="team-social-icon" width="16" height="16">
+                    <a href="#" class="team-social-link">
+                      <svg class="team-social=icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social">
-                    <a href="#" class="social-link">
-                      <svg class="team-social-icon" width="16" height="16">
+                    <a href="#" class="team-social-link">
+                      <svg class="team-social=icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social">
-                    <a href="#" class="social-link">
-                      <svg class="team-social-icon" width="16" height="16">
+                    <a href="#" class="team-social-link">
+                      <svg class="team-social=icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -275,28 +275,28 @@
                 <ul class="list social-list">
                   <li class="team-social">
                     <a href="#" class="team-social-link">
-                      <svg class="team-social-icon" width="16" height="16">
+                      <svg class="team-social=icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social">
-                    <a href="#" class="social-link">
-                      <svg class="team-social-icon" width="16" height="16">
+                    <a href="#" class="team-social-link">
+                      <svg class="team-social=icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social">
-                    <a href="#" class="social-link">
-                      <svg class="team-social-icon" width="16" height="16">
+                    <a href="#" class="team-social-link">
+                      <svg class="team-social=icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social">
-                    <a href="#" class="social-link">
-                      <svg class="team-social-icon" width="16" height="16">
+                    <a href="#" class="team-social-link">
+                      <svg class="team-social=icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
