--- a/index.html
+++ b/index.html
@@ -369,42 +369,41 @@
     </main>
     <footer class="footer">
       <div class="container footer-container">
-        <ul class="list footer-list">
-          <li>
-            <a class="header-logo link" href="./index.html"
-              >Web<span class="header-web">Studio</span></a
-            >
-            <p class="footer-text">
-              Increase the flow of customers and sales for your business with
-              digital marketing & growth solutions.
-            </p>
-          </li>
-          <li>
-            <p class="footer-text-social">Social media</p>
-            <ul class="list social-list footer-social">
-              <li class="team-social">
-                <svg class="team-social-icon" width="16" height="16">
-                  <use href="./images/icons.svg#icon-instagram"></use>
-                </svg>
-              </li>
-              <li class="team-social">
-                <svg class="team-social-icon" width="16" height="16">
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg>
-              </li>
-              <li class="team-social">
-                <svg class="team-social-icon" width="16" height="16">
-                  <use href="./images/icons.svg#icon-facebook"></use>
-                </svg>
-              </li>
-              <li class="team-social">
-                <svg class="team-social-icon" width="16" height="16">
-                  <use href="./images/icons.svg#icon-linkedin"></use>
-                </svg>
-              </li>
-            </ul>
-          </li>
-        </ul>
+            <div class="footer-logo">
+              <a class="header-logo link" href="./index.html"
+                >Web<span class="header-web">Studio</span></a
+              >
+              <p class="footer-text">
+                Increase the flow of customers and sales for your business with
+                digital marketing & growth solutions.
+              </p>
+            </div>
+          
+            <div>
+              <p class="footer-text-social">Social media</p>
+              <ul class="list social-list footer-social">
+                <li class="team-social">
+                  <svg class="team-social-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </li>
+                <li class="team-social">
+                  <svg class="team-social-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </li>
+                <li class="team-social">
+                  <svg class="team-social-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </li>
+                <li class="team-social">
+                  <svg class="team-social-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </li>
+              </ul>
+            </div>          
       </div>
     </footer>
    
