--- a/index.html
+++ b/index.html
@@ -384,28 +384,28 @@
               <ul class="list social-list footer-social">
                 <li class="team-social">
                  <a href="#" class="footer-social-link">
-                    <svg class="team-social-icon" width="16" height="16">
+                    <svg class="team-social-icon" width="24" height="24">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                  </a>
                 </li>
                 <li class="team-social">
                   <a href="#" class="footer-social-link">
-                    <svg class="team-social-icon" width="16" height="16">
+                    <svg class="team-social-icon" width="24" height="24">
                       <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social">
                   <a href="#" class="footer-social-link">
-                    <svg class="team-social-icon" width="16" height="16">
+                    <svg class="team-social-icon" width="24" height="24"">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social">
                   <a href="#" class="footer-social-link">
-                    <svg class="team-social-icon" width="16" height="16">
+                    <svg class="team-social-icon" width="24" height="24">
                       <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
