--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
               </p>
             </div>
           
-            <div>
+            <div class="footer-social-block">
               <p class="footer-text-social">Social media</p>
               <ul class="list social-list footer-social">
                 <li class="team-social">
