--- a/portfolio.html
+++ b/portfolio.html
@@ -86,22 +86,13 @@
           </ul>
           <ul class="portfolio-list">
             
-              <li class="categories-item">
-                <div class="categories-item-block">
-                  <a class="link categories-link" href="">
-                  <img
-                    src="./images/img_h2_1.jpg"
-                    alt="Banking App Interface"
-                    width="360"
-                  />
-                  
-                  <div class="categories-hidden-block">
-                    <p>
-                      14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · 
-                      Exotic Fruit Ecommerce App · Cloud Storage App
-                    </p>
-                  </div>
-            </div>
+            <li class="categories-item">
+              <a class="link categories-link" href="">
+                <img
+                  src="./images/img_h2_1.jpg"
+                  alt="Banking App Interface"
+                  width="360"
+                />
                 <div class="categories-item-text">
                   <h2 class="portfolio-subtittle">
                     Banking App Interface Concept
@@ -109,7 +100,6 @@
                   <p class="portfolio-text">App</p>
                 </div>
               </a>
-            </li>
             <li class="categories-item">
               <a class="link categories-link" href="">
                 <img
@@ -249,7 +239,7 @@
                 </li>
                 <li class="team-social">
                   <a href="#" class="footer-social-link">
-                    <svg class="team-social-icon" width="24" height="24"">
+                    <svg class="team-social-icon" width="24" height="24">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
