--- a/portfolio.html
+++ b/portfolio.html
@@ -96,7 +96,7 @@
                     width="360"
                   />
                   <p class="categories-hidden">
-                    14 Stylish and User-Friendly App Design Concepts · Task
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                   </p>
                 </div>
                 <div class="categories-item-text">
@@ -110,11 +110,16 @@
 
             <li class="categories-item">
               <a class="link categories-link" href="">
-                <img
-                  src="./images/img_h2_2.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                />
+                <div class="categories-block-item">
+                  <img
+                    src="./images/img_h2_2.jpg"
+                    alt="Banking App Interface"
+                    width="360"
+                  />
+                  <p class="categories-hidden">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="categories-item-text">
                   <h2 class="portfolio-subtittle">Cashless Payment</h2>
                   <p class="portfolio-text">Marketing</p>
@@ -123,11 +128,16 @@
             </li>
             <li class="categories-item">
               <a class="link categories-link" href="">
-                <img
-                  src="./images/img_h2_3.jpg"
-                  alt="Meditation App"
-                  width="360"
-                />
+                <div class="categories-block-item">
+                  <img
+                    src="./images/img_h2_3.jpg"
+                    alt="Banking App Interface"
+                    width="360"
+                  />
+                  <p class="categories-hidden">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="categories-item-text">
                   <h2 class="portfolio-subtittle">Meditation App</h2>
                   <p class="portfolio-text">App</p>
@@ -136,11 +146,16 @@
             </li>
             <li class="categories-item">
               <a class="link categories-link" href="">
-                <img
-                  src="./images/img_h2_4.jpg"
-                  alt="Taxi Service"
-                  width="360"
-                />
+                <div class="categories-block-item">
+                  <img
+                    src="./images/img_h2_4.jpg"
+                    alt="Banking App Interface"
+                    width="360"
+                  />
+                  <p class="categories-hidden">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="categories-item-text">
                   <h2 class="portfolio-subtittle">Taxi Service</h2>
                   <p class="portfolio-text">Marketing</p>
@@ -149,11 +164,16 @@
             </li>
             <li class="categories-item">
               <a class="link categories-link" href="">
-                <img
-                  src="./images/img_h2_5.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                />
+                <div class="categories-block-item">
+                  <img
+                    src="./images/img_h2_5.jpg"
+                    alt="Banking App Interface"
+                    width="360"
+                  />
+                  <p class="categories-hidden">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="categories-item-text">
                   <h2 class="portfolio-subtittle">Screen Illustrations</h2>
                   <p class="portfolio-text">Design</p>
@@ -162,11 +182,16 @@
             </li>
             <li class="categories-item">
               <a class="link categories-link" href="">
-                <img
-                  src="./images/img_h2_6.jpg"
-                  alt="Online Courses"
-                  width="360"
-                />
+                <div class="categories-block-item">
+                  <img
+                    src="./images/img_h2_6.jpg"
+                    alt="Banking App Interface"
+                    width="360"
+                  />
+                  <p class="categories-hidden">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="categories-item-text">
                   <h2 class="portfolio-subtittle">Online Courses</h2>
                   <p class="portfolio-text">Marketing</p>
@@ -175,11 +200,16 @@
             </li>
             <li class="categories-item">
               <a class="link categories-link" href="">
-                <img
-                  src="./images/img_h2_7.jpg"
-                  alt="Instagram Stories Concept"
-                  width="360"
-                />
+                <div class="categories-block-item">
+                  <img
+                    src="./images/img_h2_7.jpg"
+                    alt="Banking App Interface"
+                    width="360"
+                  />
+                  <p class="categories-hidden">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="categories-item-text">
                   <h2 class="portfolio-subtittle">Instagram Stories Concept</h2>
                   <p class="portfolio-text">Design</p>
@@ -188,11 +218,16 @@
             </li>
             <li class="categories-item">
               <a class="link categories-link" href="">
-                <img
-                  src="./images/img_h2_8.jpg"
-                  alt="Organic Food"
-                  width="360"
-                />
+                <div class="categories-block-item">
+                  <img
+                    src="./images/img_h2_8.jpg"
+                    alt="Banking App Interface"
+                    width="360"
+                  />
+                  <p class="categories-hidden">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="categories-item-text">
                   <h2 class="portfolio-subtittle">Organic Food</h2>
                   <p class="portfolio-text">Web Site</p>
@@ -201,11 +236,16 @@
             </li>
             <li class="categories-item">
               <a class="link categories-link" href="">
-                <img
-                  src="./images/img_h2_9.jpg"
-                  alt="Fresh Coffee"
-                  width="360"
-                />
+                <div class="categories-block-item">
+                  <img
+                    src="./images/img_h2_9.jpg"
+                    alt="Banking App Interface"
+                    width="360"
+                  />
+                  <p class="categories-hidden">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="categories-item-text">
                   <h2 class="portfolio-subtittle">Fresh Coffee</h2>
                   <p class="portfolio-text">Web Site</p>
