--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           >
           <ul class="list">
             <li class="list-item">
-              <a class="list-item-link link studio" href="./index.html">Studio</a>
+              <a class="list-item-link link studio studio-link" href="./index.html">Studio</a>
             </li>
             <li class="list-item">
               <a class="list-item-link link" href="./portfolio.html"
