--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
           >
           <ul class="list">
             <li class="list-item">
-              <a class="list-item-link link" href="./index.html">Studio</a>
+              <a class="list-item-link link studio-link" href="./index.html">Studio</a>
             </li>
             <li class="list-item">
               <a
