--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <section class="hero">
         <div class="hero-contanier container">
           <h1 class="hero-tittle">Effective Solutions for Your Business</h1>
-          <button class="hero-btn" type="button" >Order Service</button>
+          <button class="hero-btn" type="button" data-modal-open>Order Service</button>
         </div>
       </section>
 
